[gd_scene load_steps=7 format=3 uid="uid://b8pitxln1wtbv"]

[ext_resource type="Script" uid="uid://dtwbnva5tmwsv" path="res://Scripts/machine/unaryMachine.gd" id="1_nvqa0"]
[ext_resource type="Script" uid="uid://charp5oxyaipl" path="res://Scripts/machine/components/itemReceiver.gd" id="3_5i28j"]
[ext_resource type="Script" uid="uid://n8oknhffvyem" path="res://Scripts/machine/components/itemCalculator.gd" id="4_nvqa0"]
[ext_resource type="SpriteFrames" uid="uid://mh22nx38gjr7" path="res://Resources/sprites/unary_machine.tres" id="4_sqt0i"]
[ext_resource type="PackedScene" uid="uid://dt8fsl15bq120" path="res://Packed/ItemTransporter.tscn" id="5_5i28j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_usf1e"]
size = Vector2(8, 8)

[node name="UnaryMathMachine" type="Node2D"]
script = ExtResource("1_nvqa0")

[node name="ItemReceiver" type="Area2D" parent="."]
position = Vector2(32, 0)
script = ExtResource("3_5i28j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemReceiver"]
shape = SubResource("RectangleShape2D_usf1e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("4_sqt0i")
autoplay = "default"

[node name="ItemCalculator" type="Label" parent="."]
offset_left = -52.0
offset_top = -12.0
offset_right = -12.0
offset_bottom = 11.0
pivot_offset = Vector2(20, 11.5)
text = "OP"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_nvqa0")

[node name="ItemTransporter" parent="." instance=ExtResource("5_5i28j")]
position = Vector2(-32, 0)
